add payOut.vue bug fix payOut.vue.vue

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico"> -->
     <script charset="utf-8" src="https://map.qq.com/api/js?v=2.exp&key=P4FBZ-QO5WF-CI2J5-JYZUJ-CM4T2-XAFGE"></script>
-    <title>商家恋</title>
+    <title>闪电云招</title>
   </head>
   <body>
     <noscript>
