--- a/public/redirect.html
+++ b/public/redirect.html
@@ -9,6 +9,6 @@
      <!-- built files will be auto injected --> 
    </body> 
    <script> 
-   window.location = "https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxe1a18acc280136bb&redirect_uri=https://wxp.sharkmeida.cn/statics/dist/index.html?" + encodeURIComponent(location.search.split('?')[1]) + "&response_type=code&scope=snsapi_userinfo&state=1#wechat_redirect";
+   window.location = "https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxe1a18acc280136bb&redirect_uri=https://wp.sharkmeida.cn/statics/dist/index.html?" + encodeURIComponent(location.search.split('?')[1]) + "&response_type=code&scope=snsapi_userinfo&state=1#wechat_redirect";
    </script> 
  </html> 
